@startuml dotfiles


package application {
    class Application {}
    class Factory {}
}

package accessor {
    class AccessPoint {}
    class Accessor {
        + package_accessor
    }
}

package data_models {
    class Object {}
    class Package {}
}




Application --> Factory

Accessor --> AccessPoint
application -> Accessor

Object --|> Package
@enduml
